# SRAI-agent

./: .gitignore  PATCH_NOTES.md  README.md  pyproject.toml  requirements.txt  test_core_functions.py
.github/: copilot-instructions.md
scripts/: zh2en_live_test.py
src/paperscout/: app.py
src/paperscout/config/: settings.py  ui_state.py
src/paperscout/services/: __init__.py  dual_orchestrator.py  init_pipeline.py  llm_client.py  openai_init.py  runtime_context.py  zh2en_orchestrator.py
src/paperscout/services/init_steps/: __init__.py  base.py  step_compare_arxiv_abstracts.py  step_create_workspace.py  step_fetch_arxiv_papers.py  step_init_metadata.py  step_organize_selected_papers.py  step_submit_prompt.py
src/paperscout/services/prompts/: __init__.py  arxiv_prompts.py  zh2en_prompts.py
src/paperscout/ui/: main_window.py  settings_window.py  styles.qss
src/paperscout/ui/components/: chat_header.py  chat_view.py  composer.py  feature_sidebar.py  task_sidebar.py
src/paperscout/ui/controllers/: chat_controller.py
src/paperscout/ui/dialogs/: profile_editor_dialog.py
src/paperscout/ui/menus/: model_menu.py
src/paperscout/ui/settings/: settings_window.py
src/paperscout/ui/settings/pages/: llm_page.py  system_page.py
src/paperscout/ui/workers/: __init__.py  dual_chat_worker.py  init_pipeline_worker.py  openai_init_worker.py  zh2en_chat_worker.py  zh2en_init_worker.py
tests/: test_ui_state_cleanup.py
