[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paperscout"
version = "0.1.0"
description = "PaperScout UI scaffold"
requires-python = ">=3.9"
dependencies = ["PySide6>=6.5", "openai>=1.0", "keyring>=24.0", "cryptography>=41.0"]

[project.scripts]
paperscout = "paperscout.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
